# healthpi

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  log4rs.yml
.githooks/: pre-commit
.github/workflows/: angular.yml  rust.yml
healthpi-api/: Cargo.toml
healthpi-api/src/: main.rs
healthpi-api/src/db/: measurement.rs  mod.rs
healthpi-bt/: Cargo.toml
healthpi-bt/src/: api.rs  bluez.rs  btleplug.rs  lib.rs  macaddress.rs
healthpi-client/: Cargo.toml
healthpi-client/src/: client.rs  lib.rs
healthpi-db/: Cargo.toml  Migrant.toml  diesel.toml
healthpi-db/migrations/2022-08-15-120205_create_measurements/: up.sql
healthpi-db/migrations/20230123223431_create-tables/: up.sql
healthpi-db/src/: device.rs  lib.rs  measurement.rs
healthpi-db/src/db/: connection.rs  measurement.rs  mod.rs  schema.rs
healthpi-db/src/store/db/: schema.rs
healthpi-loader/: Cargo.toml
healthpi-loader/src/: daemon.rs  lib.rs  main.rs
healthpi-loader/src/devices/: contour.rs  device.rs  huawei.rs  mod.rs  soehnle.rs  utils.rs
healthpi-loader/tests/: integration.rs
healthpi-model/: Cargo.toml
healthpi-model/src/: device.rs  lib.rs  measurement.rs
migrations/2022-08-15-120205_create_measurements/: down.sql  up.sql
nix/: default.nix  shell.nix
src/: main.rs
src/devices/: contour.rs  device.rs  mod.rs  soehnle.rs  utils.rs
src/store/: measurement.rs  mod.rs  user.rs
src/store/db/: measurement.rs  mod.rs  schema.rs
webui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
webui/src/: index.html  styles.less
webui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  healthpi.service.spec.ts  healthpi.service.ts  records.ts
webui/src/app/glucose-chart/: glucose-chart.component.html  glucose-chart.component.spec.ts  glucose-chart.component.ts
webui/src/app/weight-chart/: weight-chart.component.html  weight-chart.component.less  weight-chart.component.spec.ts  weight-chart.component.ts
