[package]
name = "wagapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bluez-async = "0.6.0"
chrono = "0.4.19"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.1.2"
