[package]
name = "healthpi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
healthpi-model = { path = "../healthpi-model" }

actix-web = "4.3.0"
actix-cors = "0.7.0"
async-trait = "0.1.63"
chrono = { version = "0.4.19" }
dotenv = "0.15.0"
itertools = "0.12.1"
log = "0.4.17"
log4rs = "1.2.0"
ron = "0.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = "1.24.2"
