[package]
name = "healthpi-bt"
version = "0.1.0"
edition = "2021"

[dependencies]
healthpi-model = { path = "../healthpi-model" }

async-trait = "0.1.56"
btleplug = "0.11.5"
futures = "0.3.21"
mockall = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde"] }
