[package]
name = "healthpi-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bluez-async = "0.6.0"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
log = "0.4.17"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
uuid = { version = "1.1.2", features = ["v4"] }
