[package]
name = "healthpi-db"
version = "0.1.0"
edition = "2021"

[dependencies]
healthpi-bt = { path = "../healthpi-bt" }

chrono = "0.4.19"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
dotenv = "0.15.0"
log = "0.4.17"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rustc-hash = "1.1.0"
uuid = { version = "1.1.2", features = ["v4"] }
mockall = "0.11.3"
async-trait = "0.1.63"
tokio = "1.24.2"
