[package]
name = "healthpi-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
healthpi-bt = { path = "../healthpi-bt" }
healthpi-db = { path = "../healthpi-db" }
healthpi-model = { path = "../healthpi-model" }

async-trait = "0.1.56"
chrono = "0.4.19"
ctrlc = "3.2.3"
futures = "0.3.21"
log = "0.4.17"
log4rs = "1.1.1"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.1.2"
mockall = "0.11.3"
serde_json = "1.0.93"
serde = "1.0.152"

[[bin]]
name = "loader-daemon"
path = "src/daemon.rs"

[[bin]]
name = "load-json"
path = "src/bin/load_json.rs"
