[package]
name = "healthpi-model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19" }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_with = { version = "2.2.0", optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_with", "dep:strum", "chrono/serde"]
